fix side nav alignment

--- a/src/app/layouts/private-layout/private-layout.component.scss
+++ b/src/app/layouts/private-layout/private-layout.component.scss
@@ -205,6 +205,9 @@
               outline: none;
             }
             li {
+              &.submenu-items {
+                margin-left: 14px;
+              }
               button {
                 display: flex;
                 align-items: center;
